# ChangeLog for dev-libs/icu
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/ChangeLog,v 1.60 2007/08/27 10:59:53 jokey Exp $

  27 Aug 2007; Markus Ullmann <jokey@gentoo.org> -icu-2.8.ebuild,
  -icu-3.2.ebuild, -icu-3.4.1.ebuild:
  some cleanup

*icu-3.6-r1 (27 Aug 2007)

  27 Aug 2007; Markus Ullmann <jokey@gentoo.org> +icu-3.6-r1.ebuild:
  Version bump from project overlay

  21 Aug 2007; Jakub Moc <jakub@gentoo.org> icu-3.6-r1.ebuild:
  Add debug use flag

  21 Aug 2007; Jakub Moc <jakub@gentoo.org> +metadata.xml, +icu-3.6-r1.ebuild:
  Always install static libs as well, Bug 167481

  14 Jul 2007; Raúl Porcel <armin76@gentoo.org> icu-3.6.ebuild:
  alpha stable

  02 Jun 2007; Raúl Porcel <armin76@gentoo.org> icu-3.6.ebuild:
  Add ~alpha wrt #148659

  08 May 2007; Fabian Groffen <grobian@gentoo.org> icu-3.4.1.ebuild,
  icu-3.6.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  21 Apr 2007; Raúl Porcel <armin76@gentoo.org> icu-3.6.ebuild:
  ia64 stable

  28 Mar 2007; Raúl Porcel <armin76@gentoo.org> icu-3.6.ebuild:
  Add ~ia64 wrt bug 148659

  28 Dec 2006; Jeroen Roovers <jer@gentoo.org> icu-3.6.ebuild:
  Stable for HPPA (bug #158770).

  23 Dec 2006; Peter Weller <welp@gentoo.org> icu-3.6.ebuild:
  Stable on amd64

  03 Dec 2006; Markus Rothe <corsair@gentoo.org> icu-3.6.ebuild:
  Stable on ppc64

  26 Nov 2006; Tiziano Müller <dev-zero@gentoo.org> icu-3.6.ebuild:
  ~x86-fbsd keyword added

  12 Nov 2006; Luca Longinotti <chtekk@gentoo.org> -icu-2.6.ebuild,
  -icu-2.6.2.ebuild, icu-2.8.ebuild, icu-3.4.1.ebuild, icu-3.6.ebuild:
  Cleanup of old ebuilds, sync new ones.

*icu-3.6 (06 Nov 2006)

  06 Nov 2006; Sebastian Bergmann <sebastian@gentoo.org> +icu-3.6.ebuild:
  Version bump for bug #154203.

  30 Oct 2006; Stuart Longland <redhatter@gentoo.org> icu-3.4.1.ebuild:
  Tested successfully (using inbuilt testkit) -- ~mips keyword added on
  request of bug #148659.
