@@ -1,5 +1,4 @@
 DIST icu4c-3_6-src.tgz 10183358 RMD160 b227ac9ff6019362bc4d01c18433869b0e0ff1c2 SHA1 b580c2802e74eb6af7e5e19b05c7d7c5d8c623f9 SHA256 5135e8d69d6206d320515df7aeee7027711ab1aef9d8dbf29571a97a9746b041
-EBUILD icu-3.6-r1.ebuild 806 RMD160 ecaab2d5e5d1eee7913dc5514f1a954b9db43fb7 SHA1 90b3e7b93ad494372d71276031c0882578690e9c SHA256 af9d043436983f3ee074cf3dac5636ab0558e4b02ca094926a07ab1e84e6cf39
-EBUILD icu-3.6.ebuild 765 RMD160 3be7de6ed214dab870d8dfcfeea77d53832c4d0a SHA1 8d647d5d1b171cb7106731b127d2758a9e7220af SHA256 1a149cc010e10af6e26c2d87099a9ed12d79c3e1302f6cf0ba48404ee8165625
-MISC ChangeLog 6862 RMD160 13e4de5b348af8eaa168de0094820731e7c9bf88 SHA1 ecb909fc9d73988e71c8bbec3b8277ff0be6b887 SHA256 de2b154a4a4f67844c90f480981ad0285fea073af87d8730fe1938949ecf27a4
+EBUILD icu-3.6-r1.ebuild 807 RMD160 0c40169901e066499a5172c4cd2abbdd27a2f158 SHA1 d244bb57ae71b68524de26fc36c69b86dd721525 SHA256 9e9b9b596b47b9c353ad37b421c762820e3e52c3e466a39e60226dba9919de52
+MISC ChangeLog 6956 RMD160 8c576856429e12a89c6a6f3c19680960a5178fe9 SHA1 14e8e6986c09c6d5648857ad0d110fe9bc5b7544 SHA256 37b4631eed255e44103314ce45f84ffeeace4b508e3864045ea1c7377691fe00
 MISC metadata.xml 157 RMD160 a98db3a086fae3c09a903dadbc05f60443ec4b1a SHA1 ddaa23cc35eb917bf8962b652442bebb1ce0f440 SHA256 54f8878ca0228e380abbaa4b529806b5533a6b9b51b3b16c0909e906586a91a1
