@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/icu-3.6-r1.ebuild,v 1.1 2007/08/27 10:52:09 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/icu-3.6-r1.ebuild,v 1.2 2007/11/09 23:01:09 nixnut Exp $
 
 EAPI="prefix"
 
