@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/icu
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/ChangeLog,v 1.60 2007/08/27 10:59:53 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/ChangeLog,v 1.61 2007/11/09 23:01:09 nixnut Exp $
+
+  09 Nov 2007; nixnut <nixnut@gentoo.org> icu-3.6-r1.ebuild:
+  Stable on ppc wrt bug 198580
 
   27 Aug 2007; Markus Ullmann <jokey@gentoo.org> -icu-2.8.ebuild,
   -icu-3.2.ebuild, -icu-3.4.1.ebuild:
